<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aliceBlue"
    android:orientation="vertical"
    tools:context=".ui.activity.AddServiceActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_main_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/msg_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_medium"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/str_full_name"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/cairo_bold"
                        android:paddingStart="12dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="4dp"
                        android:text="@string/str_full_name"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_txt"
                        android:background="@drawable/ic_shape_border_white"
                        android:cursorVisible="true"
                        android:fontFamily="@font/cairo_regular"
                        android:hint="@string/str_name_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="10dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_grey"
                        android:textCursorDrawable="@color/black"
                        android:textSize="14dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name_feedback_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_et"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/cairo_medium"
                        android:paddingStart="12dp"
                        android:paddingTop="6dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="0dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/number_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_feedback_tv"
                        android:fontFamily="@font/cairo_bold"
                        android:paddingStart="12dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="4dp"
                        android:text="@string/str_mobile"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        tools:ignore="SpUsage" />

                    <LinearLayout
                        android:id="@+id/phone_no_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/number_txt"
                        android:background="@drawable/ic_shape_border_white"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/phone_no_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/cairo_regular"
                            android:hint="@string/str_mobile"
                            android:inputType="phone"
                            android:paddingStart="16dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="16dp"
                            android:paddingBottom="10dp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textSize="14dp" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/desc_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/phone_no_container"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/cairo_bold"
                        android:paddingStart="12dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="4dp"
                        android:text="@string/str_problem_desc"
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/desc_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desc_txt"
                        android:background="@drawable/ic_shape_border_white"
                        android:cursorVisible="true"
                        android:fontFamily="@font/cairo_regular"
                        android:gravity="start"
                        android:hint="@string/str_desc_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textImeMultiLine"
                        android:minHeight="150dp"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="16dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_grey"
                        android:textCursorDrawable="@color/black"
                        android:textSize="14dp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/confirm_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_button_bg"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:paddingTop="11dp"
                        android:paddingBottom="11dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo_bold"
                            android:text="@string/str_save"
                            android:textColor="@color/white"
                            android:textSize="14dp" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/loading"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            android:scaleType="fitCenter"
                            android:visibility="gone"
                            app:lottie_autoPlay="true"
                            app:lottie_colorFilter="@color/white"
                            app:lottie_fileName="json/loader.json"
                            app:lottie_loop="true"
                            app:lottie_progress="0.5"
                            app:lottie_renderMode="automatic"
                            app:lottie_repeatCount="-1"
                            app:lottie_repeatMode="restart"
                            app:lottie_speed="1.0" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cancel_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_light_gray_bg"
                        android:clipToPadding="false"
                        android:gravity="center"
                        android:paddingTop="11dp"
                        android:paddingBottom="11dp"
                        android:visibility="visible">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo_bold"
                            android:text="@string/str_cancel"
                            android:textColor="@color/dark_grey"
                            android:textSize="14dp"
                            tools:ignore="SpUsage" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>